[package]
name = "repro"
version = "0.1.0"
edition = "2021"

[dependencies]
# aws-lc-rs = { version = "1.9.0", features = ["bindgen"]}
ring = "0.17"
tracing = "0.1.40"
tracing-oslog = "0.2.0"
tracing-subscriber = "0.3.18"
uniffi = { version = "0.28.1", features = ["cli"] }
# cc = "=1.0.89"

# [lib]
# name = "repro"
# crate-type = ["staticlib","cdylib"]

[[bin]]
name = "uniffi-bindgen"
path = "src/uniffi-bindgen.rs"

# [profile.release]
# panic = "abort"
# lto = true
# strip = true
